[package]
name = "unleash-client"
version = "0.1.1"
edition = "2021"
rust-version = "1.60"
license = "Apache-2.0"
description = "Unleash client SDK for Rust"
homepage = "https://github.com/teqm/unleash-client-rs"
repository = "https://github.com/teqm/unleash-client-rs"

[features]
default = []

[dependencies]
chrono = { version = "0.4.23" }
reqwest = { version = "0.11.16", features = ["json"] }
tokio = { version = "1.27.0", features = ["time"] }
tracing = "0.1.37"
unleash-yggdrasil = "0.5.6"
unleash-types = "0.10.0"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tracing-subscriber = "0.3.16"

[[example]]
name = "main"
